# duckdb-substrait-demo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.cpp
.github/workflows/: main.yml
src/: duckdb_to_substrait.cpp  substrait_to_duckdb.cpp
src/include/: duckdb_to_substrait.hpp  substrait_to_duckdb.hpp
tests/: CMakeLists.txt  test.cpp
